--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "backend": "file:",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "mongoose": "^8.8.1",
     "nodemon": "^3.1.7"
