--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 # Ignore node_modules directories
 backend/node_modules/
 frontend/node_modules/
+backend/config.js/
 
 # Ignore other common files and directories
 .env
 .DS_Store
 *.log
+
